--- a/ProductCatalogueApi/ProductCatalogue.csproj
+++ b/ProductCatalogueApi/ProductCatalogue.csproj
@@ -8,10 +8,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="DbModels\**" />
+	  <Content Remove="DbModels\**" />
+	  <EmbeddedResource Remove="DbModels\**" />
+	  <None Remove="DbModels\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Remove="Authentication\ApplicationDbContext.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
