Added Wishlist functionality

--- a/ProductCatalogueApi/appsettings.json
+++ b/ProductCatalogueApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=DESKTOP-T0PIKUK;Initial Catalog=ProductCatalogue;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;TrustServerCertificate=True"
+    "ConnStr": "Data Source=.;Initial Catalog=ProductCatalogue;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;TrustServerCertificate=True"
   },
 
 
