--- a/Product Catalogue/package.json
+++ b/Product Catalogue/package.json
@@ -18,8 +18,10 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-star-ratings": "^2.3.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
