--- a/Product Catalogue/package.json
+++ b/Product Catalogue/package.json
@@ -16,10 +16,13 @@
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
+    "mui-file-input": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-magnify": "^2.7.4",
+    "react-material-file-upload": "^0.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-star-ratings": "^2.3.0",
