--- a/ProductCatalogueApi/ProductCatalogue.csproj
+++ b/ProductCatalogueApi/ProductCatalogue.csproj
@@ -33,6 +33,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Syncfusion.HtmlToPdfConverter.Net.Windows" Version="24.2.5" />
 	</ItemGroup>
 
 	<ItemGroup>
