--- a/Product Catalogue/package.json
+++ b/Product Catalogue/package.json
@@ -16,10 +16,12 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
+    "material-ui-confirm": "^3.0.11",
     "mui-file-input": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
