--- a/Product Catalogue/package.json
+++ b/Product Catalogue/package.json
@@ -23,13 +23,16 @@
     "jwt-decode": "^4.0.0",
     "material-ui-confirm": "^3.0.11",
     "mui-file-input": "^4.0.3",
+    "mui-rte": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-files": "^3.0.0",
+    "react-html-parser": "^2.0.2",
     "react-image-magnify": "^2.7.4",
     "react-material-file-upload": "^0.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-rte": "^0.16.5",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
